src/objects/LBI__LatticeSyncBatchStep__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIStartDatetime__c</fullName>
        <label>API Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__BatchClassAPIName__c</fullName>
        <label>BatchClassAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__BatchEndTime__c</fullName>
        <label>Batch End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__BatchJobID__c</fullName>
        <label>Batch Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__BatchStartTime__c</fullName>
        <label>Batch Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__ChunkSize__c</fullName>
        <label>Chunk Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ChunksComplete__c</fullName>
        <label>Chunks Complete</label>
        <summaryFilterItems>
            <field>LBI__LatticeSyncBatchChunk__c.LBI__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__ChunksInError__c</fullName>
        <label>Chunks in Error</label>
        <summaryFilterItems>
            <field>LBI__LatticeSyncBatchChunk__c.LBI__Status__c</field>
            <operation>equals</operation>
            <value>In Error</value>
        </summaryFilterItems>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__FailureReason__c</fullName>
        <label>Failure Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeSyncBatchRun__c</fullName>
        <label>Lattice Sync Batch Run</label>
        <referenceTo>LBI__LatticeSyncBatchRun__c</referenceTo>
        <relationshipLabel>Lattice Sync Batch Steps</relationshipLabel>
        <relationshipName>LatticeSyncBatchSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__RecommendationAPIStartDatetime__c</fullName>
        <description>Only used in the Account Extension Retrieval. It stores the Recommendation &quot;Start Date&quot; used in this step</description>
        <inlineHelpText>Only used in the Account Extension Retrieval. It stores the Recommendation &quot;Start Date&quot; used in this step</inlineHelpText>
        <label>Recommendation API Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__StepGUID__c</fullName>
        <label>Step GUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__StepName__c</fullName>
        <label>Step Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TotalChunks__c</fullName>
        <label>Total Chunks</label>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalCountError__c</fullName>
        <label>Total Count Error</label>
        <summarizedField>LBI__LatticeSyncBatchChunk__c.LBI__CountError__c</summarizedField>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalCountSuccess__c</fullName>
        <label>Total Count Success</label>
        <summarizedField>LBI__LatticeSyncBatchChunk__c.LBI__CountSuccess__c</summarizedField>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalExpectedRecords__c</fullName>
        <label>Total Expected Records</label>
        <summarizedField>LBI__LatticeSyncBatchChunk__c.LBI__ExpectedRecords__c</summarizedField>
        <summaryForeignKey>LBI__LatticeSyncBatchChunk__c.LBI__LatticeSyncBatchStep__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Lattice Sync Batch Step</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__StepGUID__c</columns>
        <columns>LBI__StepName__c</columns>
        <columns>LBI__ChunksComplete__c</columns>
        <columns>LBI__ChunksInError__c</columns>
        <columns>LBI__APIStartDatetime__c</columns>
        <columns>LBI__TotalExpectedRecords__c</columns>
        <columns>LBI__TotalChunks__c</columns>
        <columns>LBI__TotalCountError__c</columns>
        <columns>LBI__TotalCountSuccess__c</columns>
        <columns>LBI__ChunkSize__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SBS-{00000000}</displayFormat>
        <label>Sync Batch Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Sync Batch Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>